--- a/html/edit.html
+++ b/html/edit.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <link rel="stylesheet" href="/resources/editormd/css/style.css"/>
-    <link rel="stylesheet" href="/resources/editormd/css/editormd.min.css"/>
+    <link rel="stylesheet" href="/resources/editormd/css/editormd.min.css?12"/>
     <link rel="shortcut icon" href="/resources/editormd/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
@@ -22,7 +22,7 @@
 </div>
 <script src="/resources/editormd/js/jquery.min.js"></script>
 <script src="/resources/editormd/js/editormd.js"></script>
-<script src="/resources/editormd/js/light.js?40"></script>
+<script src="/resources/editormd/js/light.js?41"></script>
 <script>
 function getTile(){
     var url =getMd();
