--- a/html/view.html
+++ b/html/view.html
@@ -2,9 +2,9 @@
 <html lang="zh">
     <head>
         <meta charset="utf-8" />
-        <title>HTML Preview(markdown to html) - Editor.md examples</title>
+        <title>.</title>
         <link rel="stylesheet" href="/resources/editormd/css/style.css" />
-        <link rel="stylesheet" href="/resources/editormd/css/editormd.preview.css" />
+        <link rel="stylesheet" href="/resources/editormd/css/editormd.preview.css?1231" />
         <link rel="shortcut icon" href="/resources/editormd/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="/resources/css/layui.css" />
         <style>            
