--- a/html/view.html
+++ b/html/view.html
@@ -46,10 +46,11 @@
         <script src="/resources/editormd/lib/flowchart.min.js"></script>
         <script src="/resources/editormd/lib/jquery.flowchart.min.js"></script>
 
-        <script src="/resources/editormd/js/editormd.js"></script>
-        <script src="/resources/md.js"></script>
+        <script src="/resources/editormd/js/editormd.js?15"></script>
+        <script src="/resources/md.js?1"></script>
         <script type="text/javascript">
-function init(md){
+function init(md,resBase){
+    console.log(resBase);
     var testEditormdView, testEditormdView2;
                 //var markdown=$('#append-test').val();
                 testEditormdView = editormd.markdownToHTML("test-editormd-view", {
@@ -67,6 +68,7 @@ function init(md){
                         tex             : true,  // 默认不解析
                         flowChart       : true,  // 默认不解析
                         sequenceDiagram : true,  // 默认不解析
+                        resBase         : resBase
                     });
 }
 
@@ -87,8 +89,8 @@ $(function(){
     dataType: 'text',
     success:e=>{
         var state = {title:'',url:window.location.href.split("#")[0]}
-        history.pushState(state,'',mdfile);
-        init(e);
+        //history.pushState(state,'',mdfile);
+        init(e,resBase);
     },
     statusCode: {
             404: e=>{console.log('404')},
