--- a/html/view.html
+++ b/html/view.html
@@ -84,7 +84,7 @@ document.title=getTile();
 $(function(){
     var path=getMd();
     console.log(path);
-    $.ajax(path+"&d="+new Date().getTime(),{
+    $.ajax(path+"?d="+new Date().getTime(),{
     type: 'GET',
     dataType: 'text',
     success:e=>{
